Fix layout issues by adjusting header height and footer padding for improved design consistency

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -92,7 +92,6 @@ header.thanksHeader {
 }
 .favoriteHeader .main {
   margin-top: -30px;
-  height: 100%;
 }
 header::before{
   content: "";
@@ -1240,7 +1239,7 @@ a.active {
   background-color: var(--darkBackground); 
   color: #f8f8f8;
   margin: 0 auto;
-  padding: 6rem 4rem 1rem 4rem;
+  padding: 6rem 4rem 5rem 4rem;
 }
 
 .footer-grid {
